# MPPI-RL

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  setup.py
config/: default.yaml
config/env/: unitree_go_2_trot.yaml
config/sac/: default_sac.yaml  dummy_config.yaml
mppi_rl/: __init__.py  run.py
mppi_rl/brax_rl/: brax_env.py  brax_rsl_env.py  go2_training.ipynb  tutorial.ipynb
mppi_rl/brax_rl/brax_utils/: __init__.py  train_sac.py
mppi_rl/eval/: calculate_error.py
mppi_rl/rl/: mppi_rl_env.py
mppi_rl/scripts/: zero_agent.py
mppi_rl/scripts/brax/: play.py  play_dialenv.py  train.py  train_sac.py
sac_mppi/: __init__.py  run.py
sac_mppi/brax_rl/: brax_env.py  brax_rsl_env.py  go2_training.ipynb  tutorial.ipynb
sac_mppi/brax_rl/brax_utils/: __init__.py  networks.py  train.py  train_sac.py
sac_mppi/eval/: calculate_error.py
sac_mppi/git/: rsl_rl.diff
sac_mppi/sac/: __init__.py  dial-mpc-env.py  sac_mppi_env.py
sac_mppi/scripts/: play.py  train.py  zero_agent.py
sac_mppi/scripts/brax/: play.py  play_dialenv.py  train.py  train_sac.py
sac_mppi/scripts/rsl_rl/: train.py
sac_mppi/utils/: files.py
