[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mppi_rl"
version = "0.1.0"
description = "MPPI with RL baseline, CMU robot learning course project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "art",
    "brax",
    "emoji",
    "GitPython",
    "ipdb",
    "jax-cosmo",
    "jax[cuda12]",
    "matplotlib",
    "mediapy",
    "mujoco",
    "numpy<2.0.0",
    "numpy>=1.16.4",
    "onnx",
    "opencv-python",
    "python-magic",
    "pyyaml",
    "scienceplots",
    "tensorboard",
    "toml",
    "torch>=1.10.0",
    "torchvision>=0.5.0",
    "tqdm",
    "tyro",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mppi_rl", "mppi_rl.*"]

[project.scripts]
train = "mppi_rl.scripts.brax.train:main"
